// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentMFAView renders as expected when current mfa is sms 1`] = `
<div>
  <div
    class="amplify-flex"
    style="flex-direction: column;"
  >
    <div
      class="amplify-flex"
      style="flex-direction: row; justify-content: space-between; align-items: center;"
    >
      <p
        class="amplify-text"
      >
        Multi-factor authentication
        :
         
        <span
          class="amplify-text"
          style="font-weight: var(--amplify-font-weights-bold);"
        >
          enabled
        </span>
      </p>
      <button
        class="amplify-button amplify-field-group__control amplify-button--small"
        data-fullwidth="false"
        data-size="small"
        type="button"
      >
        Disable MFA
      </button>
    </div>
    <div
      class="amplify-flex"
      style="flex-direction: row; align-items: center; justify-content: space-between;"
    >
      <p
        class="amplify-text"
      >
        Current MFA
        :
         
        <span
          class="amplify-text"
          style="font-weight: var(--amplify-font-weights-bold);"
        >
          sms
        </span>
      </p>
      <button
        class="amplify-button amplify-field-group__control amplify-button--small"
        data-fullwidth="false"
        data-size="small"
        type="button"
      >
        Update
      </button>
    </div>
  </div>
</div>
`;

exports[`CurrentMFAView renders as expected when current mfa is totp 1`] = `
<div>
  <div
    class="amplify-flex"
    style="flex-direction: column;"
  >
    <div
      class="amplify-flex"
      style="flex-direction: row; justify-content: space-between; align-items: center;"
    >
      <p
        class="amplify-text"
      >
        Multi-factor authentication
        :
         
        <span
          class="amplify-text"
          style="font-weight: var(--amplify-font-weights-bold);"
        >
          enabled
        </span>
      </p>
      <button
        class="amplify-button amplify-field-group__control amplify-button--small"
        data-fullwidth="false"
        data-size="small"
        type="button"
      >
        Disable MFA
      </button>
    </div>
    <div
      class="amplify-flex"
      style="flex-direction: row; align-items: center; justify-content: space-between;"
    >
      <p
        class="amplify-text"
      >
        Current MFA
        :
         
        <span
          class="amplify-text"
          style="font-weight: var(--amplify-font-weights-bold);"
        >
          totp
        </span>
      </p>
      <button
        class="amplify-button amplify-field-group__control amplify-button--small"
        data-fullwidth="false"
        data-size="small"
        type="button"
      >
        Update
      </button>
    </div>
  </div>
</div>
`;
